--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Counter</title>
+    <script src="https://pagecdn.io/lib/ace/1.4.6/ace.js"
+            type="text/javascript"
+            charset="utf-8"
+    ></script>
+    <title>Magic API</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Really? No JavaScript? Come on, it's almost 2020!</noscript>
     <div id="root"></div>
   </body>
 </html>
